# llm-analyst-rag

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE.md  NOTICES.md  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
scripts/: init_backend.py  init_cve_db.py  init_testing_environment.py  reset_tokens.py
src/: routes.py
src/auth_utils/: aws_utils.py  config.py  oauth_utils.py
src/cve_utils/: cve_manager.py
src/llm_apps/: load_apps.py  vulnerability_trend_analyst.py
src/llm_utils/: aws_utils.py  cache.py  config.py  constants.py  language_model_client.py  vector_store.py
src/models/: api_models.py  llm_models.py
src/prompts/: vulnerability_trend_analysis_prompt.py
tests/integration/: conftest.py  test_api_routes.py  test_cache.py  test_ui_routes.py
tests/unit/: test_language_model_client.py  test_prompts.py
